cluster/apps/romm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: romm
  labels:
    app: romm

spec:
  ports:
    - port: 8080
      name: web
      protocol: TCP
      targetPort: web
  selector:
    app: romm
