cluster/apps/romm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  labels:
    app: romm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "nintendo-game-boy"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - romm.kblb.io
      secretName: my-certs-romm
  rules:
    - host: romm.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm
                port:
                  name: web
